@@ -15,7 +15,7 @@
 
   <properties>
     <stack.version>4.3.0-SNAPSHOT</stack.version>
-    <ignite.version>2.12.0</ignite.version>
+    <ignite.version>2.13.0</ignite.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <jar.manifest>${project.basedir}/src/main/resources/META-INF/MANIFEST.MF</jar.manifest>
   </properties>
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.2.10</version>
+      <version>1.2.11</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -156,8 +156,10 @@
               <buildDirectory>${project.build.directory}</buildDirectory>
               <vertxVersion>${project.version}</vertxVersion>
             </systemPropertyVariables>
-            <!-- Needs to be small enough to run in a EC2 1.7GB small instance -->
-            <argLine>-Xms512M -Xmx1200M</argLine>
+            <argLine>
+              <!-- Needs to be small enough to run in a EC2 1.7GB small instance -->
+              -Xms512M -Xmx1200M
+            </argLine>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks>
             <excludes>
@@ -191,5 +193,31 @@
       </plugin>
     </plugins>
   </build>
-
+  <profiles>
+    <profile>
+      <id>java-9</id>
+      <activation>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                <!-- Needs to be small enough to run in a EC2 1.7GB small instance -->
+                -Xms512M -Xmx1200M
+                <!-- setup for JDK 17+ to replace illegal-access -->
+                --add-opens=java.base/java.nio=ALL-UNNAMED
+                --add-opens=java.base/java.util=ALL-UNNAMED
+                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                --add-opens=java.base/java.lang=ALL-UNNAMED
+              </argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
